Fix: Makes hero call-to-action small again.

--- a/themes/wwwevergreen/css/src/smacss/modules/_icons.scss
+++ b/themes/wwwevergreen/css/src/smacss/modules/_icons.scss
@@ -22,7 +22,7 @@
 
 .inline-icon{
 	// box model
-	//margin-right: 0.25em;
+	height: 100%;  // IE 11
 	max-height: 1.25em;
 	// layout
 	display: inline;
